tests/fixtures/invalid/pow_bytes_str_dict.py
# Cannot call pow() with Bytes, Str, Dict[str, int]
x = pow(b"hello", "hello", {"a": 1})
